syntax = "proto3";

option go_package = "grpc/proto";
option java_multiple_files = true;
option java_package = "io.grpc.proto.aggregator";
option java_outer_classname = "ProtoAggregator";

package proto;

service Aggregator {
  rpc AggregateInvoice(AggregateRequest) returns (AggregateReply) {}
}

message AggregateRequest {
  int64 OBUID = 1;
  double Value = 2;
  int64 Unix = 3;
}

message AggregateReply {
  int64 OBUID = 1;
  double Value = 2;
  int64 Unix = 3;
}
